// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZonesView.vue renders snapshot when multizone 1`] = `
<div>
  <div
    class="zones"
  >
    
    <!-- Zone CPs information for when Multicluster is enabled -->
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="medium rounded primary k-button refresh-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
            <span
              class="refresh-icon custom-control-icon"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </span>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class=""
              data-testid="data-overview-table"
              data-v-222fefa6=""
              is-clickable=""
            >
              <section
                class="k-table-wrapper"
                data-v-222fefa6=""
              >
                <table
                  class="has-hover is-clickable k-table"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  data-v-222fefa6=""
                >
                  <thead
                    class=""
                    data-v-222fefa6=""
                  >
                    <tr
                      class=""
                      data-v-222fefa6=""
                    >
                      
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-222fefa6=""
                          >
                            actions
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Zone CP Version
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Storage type
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Ingress
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class=""
                            data-v-222fefa6=""
                          >
                            Egress
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-222fefa6=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-222fefa6=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-222fefa6=""
                          >
                            warnings
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody
                    data-v-222fefa6=""
                  >
                    
                    <tr
                      class="is-selected"
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status is-online"
                        >
                          <span>
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        cluster-1
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                        data-v-222fefa6=""
                      >
                        
                        <span
                          class="mr-1 kong-icon-warning kong-icon"
                          data-v-71cfcfc4=""
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-75)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-75)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-75)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status is-online"
                        >
                          <span>
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        zone-1
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        Yes
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        Yes
                        
                      </td>
                      <td
                        class="text-center"
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status is-online"
                        >
                          <span>
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        zone-2
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                        data-v-222fefa6=""
                      >
                        
                        <span
                          class="mr-1 kong-icon-warning kong-icon"
                          data-v-71cfcfc4=""
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-75)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-75)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-75)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      data-v-222fefa6=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        <div
                          class="entity-status is-online"
                        >
                          <span>
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        zone-3
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                        data-v-222fefa6=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                        data-v-222fefa6=""
                      >
                        
                        
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          
          <div>
            <h3>
               Zone: cluster-1
            </h3>
          </div>
          <div>
            <div
              data-testid="entity-url-control"
            >
              
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                data-v-814c880a=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                
                <button
                  class="small rounded outline k-button"
                  data-v-6bcbf05d=""
                  type="button"
                >
                  
                  <span
                    class="k-button-icon kong-icon-copy kong-icon"
                    data-v-6bcbf05d=""
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="16"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        Copy
                      </title>
                      
  
                      <path
                        d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                        fill="var(--KButtonOutlineColor, var(--blue-500, color(blue-500)))"
                      />
                      

                    </svg>
                    

                  </span>
                  
                  
                   Copy URL 
                  
                  <!---->
                </button>
                
                <transition-stub
                  appear="false"
                  css="true"
                  data-v-814c880a=""
                  name="fade"
                  persisted="false"
                >
                  <div
                    class="k-popover"
                    data-v-814c880a=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-814c880a=""
                    >
                      
                      <p>
                        URL copied to clipboard!
                      </p>
                      
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
              
            </div>
          </div>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-b0b5f6ae=""
          >
            <ul
              aria-label="Tabs"
              data-v-b0b5f6ae=""
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="active tab-item"
                data-v-b0b5f6ae=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Overview
                  
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Zone Insights
                  
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="config-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  Config
                  
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-b0b5f6ae=""
                id="warnings-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-b0b5f6ae=""
                >
                  
                  <span
                    class="flex items-center with-warnings"
                  >
                    <span
                      class="mr-1 kong-icon-warning kong-icon"
                      data-v-71cfcfc4=""
                    >
                      <svg
                        height="16"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-75)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-75)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-75)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                    <span>
                       Warnings 
                    </span>
                  </span>
                  
                </a>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              
              <div>
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="noBorder kong-card"
                    data-v-1f0d90ac=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-1f0d90ac=""
                    >
                      <div
                        class="k-card-body"
                        data-v-1f0d90ac=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        
                        <div
                          class="label-list__col-wrapper multi-col"
                        >
                          
                          <div>
                            <ul>
                              
                              <li>
                                <h4>
                                  type
                                </h4>
                                <p>
                                  ZoneOverview
                                </p>
                              </li>
                              <li>
                                <h4>
                                  name
                                </h4>
                                <p>
                                  cluster-1
                                </p>
                              </li>
                              <li>
                                <h4>
                                  Authentication Type
                                </h4>
                                <p>
                                  dpToken
                                </p>
                              </li>
                              
                            </ul>
                          </div>
                          
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
              </div>
              
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="config-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="warnings-tab"
              class="tab-container"
              data-v-b0b5f6ae=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
          <div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZonesView.vue renders snapshot when no multizone 1`] = `
<div>
  <div
    class="zones"
  >
    
    <!-- Zone CPs information for when Multicluster is enabled -->
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="medium rounded primary k-button refresh-button"
            data-v-6bcbf05d=""
            disabled=""
            type="button"
          >
            
            <!---->
            
            
            <span
              class="refresh-icon custom-control-icon is-spinning"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </span>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <section
          class="empty-state-wrapper"
          data-testid="loading-block"
          data-v-5b55eb64=""
        >
          <div
            class="empty-state-title"
            data-v-5b55eb64=""
          >
            <!---->
            <div
              class="k-empty-state-title-header mt-4 mb-4"
              data-v-5b55eb64=""
            >
              
              <div
                class="card-icon mb-3"
              >
                <span
                  class="kong-icon-spinner kong-icon"
                  data-v-71cfcfc4=""
                >
                  <svg
                    fill="none"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
  
                    <title>
                      Loading
                    </title>
                    
  
                    <g>
                      
    
                      <path
                        d="M5 10a5 5 0 1 0 5-5"
                        fill="none"
                        stroke="#A3BBCC"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      
  
                    </g>
                    

                  </svg>
                  

                </span>
              </div>
              
              <p>
                Loading data …
              </p>
              
              
            </div>
          </div>
          <div
            class="empty-state-content"
            data-v-5b55eb64=""
          >
            <div
              class="k-empty-state-message mb-6"
              data-v-5b55eb64=""
            >
              
              
            </div>
            <div
              class="k-empty-state-cta"
              data-v-5b55eb64=""
            >
              
              <!---->
              
            </div>
          </div>
        </section>
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <!--v-if-->
        <div
          class="tab__content-container"
        >
          <!--v-if-->
          <div>
            <section
              class="empty-state-wrapper"
              data-testid="loading-block"
              data-v-5b55eb64=""
            >
              <div
                class="empty-state-title"
                data-v-5b55eb64=""
              >
                <!---->
                <div
                  class="k-empty-state-title-header mt-4 mb-4"
                  data-v-5b55eb64=""
                >
                  
                  <div
                    class="card-icon mb-3"
                  >
                    <span
                      class="kong-icon-spinner kong-icon"
                      data-v-71cfcfc4=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 20 20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        
  
                        <title>
                          Loading
                        </title>
                        
  
                        <g>
                          
    
                          <path
                            d="M5 10a5 5 0 1 0 5-5"
                            fill="none"
                            stroke="#A3BBCC"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                  </div>
                  
                  <p>
                    Loading data …
                  </p>
                  
                  
                </div>
              </div>
              <div
                class="empty-state-content"
                data-v-5b55eb64=""
              >
                <div
                  class="k-empty-state-message mb-6"
                  data-v-5b55eb64=""
                >
                  
                  
                </div>
                <div
                  class="k-empty-state-cta"
                  data-v-5b55eb64=""
                >
                  
                  <!---->
                  
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZonesView.vue renders zone insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  <header
    class="tab__header"
  >
    
    <div>
      <h3>
         Zone: cluster-1
      </h3>
    </div>
    <div>
      <div
        data-testid="entity-url-control"
      >
        
        <div
          aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          data-v-814c880a=""
          id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          role="button"
        >
          
          <button
            class="small rounded outline k-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon-copy kong-icon"
              data-v-6bcbf05d=""
              data-v-71cfcfc4=""
            >
              <svg
                height="16"
                role="img"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Copy
                </title>
                
  
                <path
                  d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                  fill="var(--KButtonOutlineColor, var(--blue-500, color(blue-500)))"
                />
                

              </svg>
              

            </span>
            
            
             Copy URL 
            
            <!---->
          </button>
          
          <transition-stub
            appear="false"
            css="true"
            data-v-814c880a=""
            name="fade"
            persisted="false"
          >
            <div
              class="k-popover"
              data-v-814c880a=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              role="region"
              style="width: 200px; max-width: 350px; max-height: auto; display: none;"
            >
              <!---->
              <div
                class="k-popover-content"
                data-v-814c880a=""
              >
                
                <p>
                  URL copied to clipboard!
                </p>
                
              </div>
              <!---->
            </div>
          </transition-stub>
        </div>
        
      </div>
    </div>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
      data-v-b0b5f6ae=""
    >
      <ul
        aria-label="Tabs"
        data-v-b0b5f6ae=""
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Overview
            
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="active tab-item"
          data-v-b0b5f6ae=""
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Zone Insights
            
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="config-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            Config
            
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          data-v-b0b5f6ae=""
          id="warnings-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-b0b5f6ae=""
          >
            
            <span
              class="flex items-center with-warnings"
            >
              <span
                class="mr-1 kong-icon-warning kong-icon"
                data-v-71cfcfc4=""
              >
                <svg
                  height="16"
                  role="img"
                  version="1.1"
                  viewBox="0 0 48 42"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  
  
                  <title>
                    Warning
                  </title>
                  
  
                  <g
                    fill="var(--black-75)"
                    fill-rule="evenodd"
                    id="Page-1"
                    stroke="none"
                    stroke-width="1"
                  >
                    
    
                    <g
                      id="icn-warning-64x"
                    >
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        fill="var(--black-75)"
                        fill-rule="nonzero"
                        id="Triangle"
                      />
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                        type="secondary"
                      />
                      
      
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        fill="var(--black-75)"
                        id="!"
                      />
                      
    
                    </g>
                    
  
                  </g>
                  

                </svg>
                

              </span>
              <span>
                 Warnings 
              </span>
            </span>
            
          </a>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="noBorder kong-card"
          data-v-1f0d90ac=""
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
            data-v-1f0d90ac=""
          >
            <div
              class="k-card-body"
              data-v-1f0d90ac=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              <ul
                class="accordion"
              >
                
                
                <li
                  class="accordion-item relative border-b py-2 active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                  >
                    <!-- This slot will display header -->
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                         Connect time: 2021-02-19T07:11:15.535286Z
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="px-4"
                    >
                      <!-- This slot will display whole content -->
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <ul>
                            <li>
                              <strong>
                                Global Instance ID:
                              </strong>
                                
                              <span
                                class="mono"
                              >
                                MacBook-Pro-Bartlomiej.local-9e52
                              </span>
                            </li>
                            <!--v-if-->
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                                2021-02-19T07:11:15.535286Z
                            </li>
                            <!--v-if-->
                          </ul>
                        </div>
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Circuit Breaker: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Config: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Dataplane: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                External Service: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Fault Injection: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Health Check: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Mesh: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Proxy Template: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Retry: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Secret: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Traffic Log: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Traffic Permission: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Traffic Route: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Traffic Trace: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            
                          </ul>
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                <li
                  class="accordion-item relative border-b py-2"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-item-header"
                  >
                    <!-- This slot will display header -->
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                         Connect time: 2020-07-28T16:18:09.743141Z
                      </span>
                      <span
                        class="ml-4 color-red-400"
                      >
                         Disconnect time: 2020-07-28T16:18:09.743194Z
                      </span>
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                </li>
                
                
              </ul>
              
            </div>
            <!---->
          </div>
        </section>
        
        
      </div>
      <div
        aria-labelledby="config-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="warnings-tab"
        class="tab-container"
        data-v-b0b5f6ae=""
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
    <div>
      <!--v-if-->
    </div>
  </div>
</div>
`;
